--- a/.github/workflow/merge.yml
+++ b/.github/workflow/merge.yml
@@ -1,18 +1,20 @@
 name: Merge Pull Request Automatically
 
 on:
-  pull_request:
-    types: [closed]
-    branches: [main]
+  push:
+    branches:
+      - development
+    types: [pushed]
 
 jobs:
   merge:
     runs-on: ubuntu-latest
+    if: contains(github.event.head_commit.message, '--automerge')
     steps:
       - uses: actions/checkout@v3
-      - name: Merge Pull Request
+      - name: Merge Development to Master
         uses: styfle/git-merge-pr@v4
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           base: main
-          head: ${{ github.event.pull_request.head.ref }}
+          head: development
