--- a/.github/workflow/merge.yml
+++ b/.github/workflow/merge.yml
@@ -16,5 +16,5 @@ jobs:
         uses: styfle/git-merge-pr@v4
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          base: main
+          base: master
           head: development
